# Huntmaster

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  safety_concern.yml  scope_rule.yml  week1-h1-connector-db-schema.md  week2-scope-enforcer.md  week3-finding-importer.md  week4-triage-layer.md  week5-report-writer.md  week6-cli-review-queue.md
.github/workflows/: ci.yml  codeql.yml  labeler.yml  scorecard.yml
db/: schema.sql
docs/: ARCHITECTURE.md  ETHICS.md  IMPLEMENTATION_STATUS.md  PRD.md  ROADMAP.md
examples/: sample_apex_finding.json  sample_finding.json  sample_h1_report.md  sample_program_scope.json
src/huntmaster/: __init__.py  models.py
src/huntmaster/finding_importer/: __init__.py  importer.py
src/huntmaster/h1_connector/: __init__.py  client.py
src/huntmaster/report_writer/: __init__.py  markdown.py
src/huntmaster/review_queue/: __init__.py  queue.py
src/huntmaster/scope_enforcer/: __init__.py  enforcer.py
src/huntmaster/triage/: __init__.py  triage.py
tests/: test_finding_importer.py  test_h1_connector.py  test_report_writer.py  test_review_queue.py  test_scope_enforcer.py  test_triage.py
